--- a/app.json
+++ b/app.json
@@ -26,5 +26,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+  },
+  "packagerOpts": {
+    "config": "metro.config.js",
+    "sourceExts": ["ts", "tsx", "js", "jsx", "svg"]
   }
 }
