--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
-    "expo-auth-session": "^5.2.0",
+    "expo-auth-session": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -21,7 +21,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.0.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-virtualized-view": "^1.0.0"
   },
